--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,7 @@
   <title>Connexion</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="/public/styles.css" />
+  <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
 </head>
 <body class="center-page">
   <div class="card">
